assignment-3/assignment3-initial/src/main/mt22/parser/.antlr/MT22Parser.py
# Generated from d:/Learning_Documents_of_Third_Year/Principles of Programming Languages/Assignment 222/assignment-3/assignment3-initial/src/main/mt22/parser/MT22.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'('", "')'", "'['", "']'", "','", "'+'", "'-'", "'*'", 
                     "'/'", "'%'", "'='", "'<-'", "'!='", "'<'", "'<='", 
                     "'>='", "'>'", "'...'", "'=='", "'true'", "'false'", 
                     "'number'", "'bool'", "'string'", "'return'", "'var'", 
                     "'dynamic'", "'func'", "'for'", "'until'", "'by'", 
                     "'break'", "'continue'", "'if'", "'else'", "'elif'", 
                     "'begin'", "'end'", "'not'", "'and'", "'or'" ]

    symbolicNames = [ "<INVALID>", "BOOL_LIT", "NUMBER_LIT", "STRING_LIT", 
                      "LP", "RP", "LS", "RS", "COMMA", "ADD", "SUB", "MUL", 
                      "DIV", "MOD", "EQUAL", "ASSIGN", "NOT_SAME", "LESS_THAN", 
                      "LESS_THAN_EQUAL", "GREATER_THAN_EQUAL", "GREATER_THAN", 
                      "CONCAT", "SAME", "TRUE", "FALSE", "NUMBER", "BOOL", 
                      "STRING", "RETURN", "VAR", "DYNAMIC", "FUNC", "FOR", 
                      "UNTIL", "BY", "BREAK", "CONTINUE", "IF", "ELSE", 
                      "ELIF", "BEGIN", "END", "NOT", "AND", "OR", "LINE_COMMENT", 
                      "ID", "NEW_LINE", "WS", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", 
                      "ERROR_CHAR" ]

    RULE_program = 0
    RULE_decllist = 1
    RULE_decl = 2
    RULE_vardecl = 3
    RULE_vardecl_full = 4
    RULE_vardecl_not_full = 5
    RULE_vardecl_array = 6
    RULE_funcdecl = 7
    RULE_param_list = 8
    RULE_param_prime = 9
    RULE_paramdecl = 10
    RULE_stmt = 11
    RULE_assign_stmt = 12
    RULE_if_stmt = 13
    RULE_elif_stmt = 14
    RULE_else_stmt = 15
    RULE_for_stmt = 16
    RULE_break_stmt = 17
    RULE_continue_stmt = 18
    RULE_return_stmt = 19
    RULE_call_stmt = 20
    RULE_block_stmt = 21
    RULE_blocked_list = 22
    RULE_stmt_plus_vardecl = 23
    RULE_lhs = 24
    RULE_exp = 25
    RULE_expr_list = 26
    RULE_exprprime = 27
    RULE_exp0 = 28
    RULE_exp1 = 29
    RULE_exp2 = 30
    RULE_exp3 = 31
    RULE_exp4 = 32
    RULE_exp5 = 33
    RULE_exp6 = 34
    RULE_exp7 = 35
    RULE_func_call = 36
    RULE_constant = 37
    RULE_sub_exp = 38
    RULE_index_expr = 39
    RULE_index_operator = 40
    RULE_array_lit = 41
    RULE_non_empty_expr_list = 42
    RULE_array_type = 43
    RULE_dimensions = 44
    RULE_number_lits = 45
    RULE_atomic_types = 46
    RULE_newline_list = 47

    ruleNames =  [ "program", "decllist", "decl", "vardecl", "vardecl_full", 
                   "vardecl_not_full", "vardecl_array", "funcdecl", "param_list", 
                   "param_prime", "paramdecl", "stmt", "assign_stmt", "if_stmt", 
                   "elif_stmt", "else_stmt", "for_stmt", "break_stmt", "continue_stmt", 
                   "return_stmt", "call_stmt", "block_stmt", "blocked_list", 
                   "stmt_plus_vardecl", "lhs", "exp", "expr_list", "exprprime", 
                   "exp0", "exp1", "exp2", "exp3", "exp4", "exp5", "exp6", 
                   "exp7", "func_call", "constant", "sub_exp", "index_expr", 
                   "index_operator", "array_lit", "non_empty_expr_list", 
                   "array_type", "dimensions", "number_lits", "atomic_types", 
                   "newline_list" ]

    EOF = Token.EOF
    BOOL_LIT=1
    NUMBER_LIT=2
    STRING_LIT=3
    LP=4
    RP=5
    LS=6
    RS=7
    COMMA=8
    ADD=9
    SUB=10
    MUL=11
    DIV=12
    MOD=13
    EQUAL=14
    ASSIGN=15
    NOT_SAME=16
    LESS_THAN=17
    LESS_THAN_EQUAL=18
    GREATER_THAN_EQUAL=19
    GREATER_THAN=20
    CONCAT=21
    SAME=22
    TRUE=23
    FALSE=24
    NUMBER=25
    BOOL=26
    STRING=27
    RETURN=28
    VAR=29
    DYNAMIC=30
    FUNC=31
    FOR=32
    UNTIL=33
    BY=34
    BREAK=35
    CONTINUE=36
    IF=37
    ELSE=38
    ELIF=39
    BEGIN=40
    END=41
    NOT=42
    AND=43
    OR=44
    LINE_COMMENT=45
    ID=46
    NEW_LINE=47
    WS=48
    UNCLOSE_STRING=49
    ILLEGAL_ESCAPE=50
    ERROR_CHAR=51

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decllist(self):
            return self.getTypedRuleContext(MT22Parser.DecllistContext,0)


        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def NEW_LINE(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.NEW_LINE)
            else:
                return self.getToken(MT22Parser.NEW_LINE, i)

        def getRuleIndex(self):
            return MT22Parser.RULE_program




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==47:
                self.state = 96
                self.match(MT22Parser.NEW_LINE)
                self.state = 101
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 102
            self.decllist()
            self.state = 103
            self.match(MT22Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DecllistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(MT22Parser.DeclContext,0)


        def decllist(self):
            return self.getTypedRuleContext(MT22Parser.DecllistContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_decllist




    def decllist(self):

        localctx = MT22Parser.DecllistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decllist)
        try:
            self.state = 109
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 105
                self.decl()
                self.state = 106
                self.decllist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 108
                self.decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecl(self):
            return self.getTypedRuleContext(MT22Parser.VardeclContext,0)


        def funcdecl(self):
            return self.getTypedRuleContext(MT22Parser.FuncdeclContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_decl




    def decl(self):

        localctx = MT22Parser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decl)
        try:
            self.state = 113
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [25, 26, 27, 29, 30]:
                self.enterOuterAlt(localctx, 1)
                self.state = 111
                self.vardecl()
                pass
            elif token in [31]:
                self.enterOuterAlt(localctx, 2)
                self.state = 112
                self.funcdecl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecl_not_full(self):
            return self.getTypedRuleContext(MT22Parser.Vardecl_not_fullContext,0)


        def vardecl_full(self):
            return self.getTypedRuleContext(MT22Parser.Vardecl_fullContext,0)


        def vardecl_array(self):
            return self.getTypedRuleContext(MT22Parser.Vardecl_arrayContext,0)


        def NEW_LINE(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.NEW_LINE)
            else:
                return self.getToken(MT22Parser.NEW_LINE, i)

        def getRuleIndex(self):
            return MT22Parser.RULE_vardecl




    def vardecl(self):

        localctx = MT22Parser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_vardecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 115
                self.vardecl_not_full()
                pass

            elif la_ == 2:
                self.state = 116
                self.vardecl_full()
                pass

            elif la_ == 3:
                self.state = 117
                self.vardecl_array()
                pass


            self.state = 121 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 120
                self.match(MT22Parser.NEW_LINE)
                self.state = 123 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==47):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Vardecl_fullContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(MT22Parser.VAR, 0)

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def ASSIGN(self):
            return self.getToken(MT22Parser.ASSIGN, 0)

        def exp(self):
            return self.getTypedRuleContext(MT22Parser.ExpContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_vardecl_full




    def vardecl_full(self):

        localctx = MT22Parser.Vardecl_fullContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_vardecl_full)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.match(MT22Parser.VAR)
            self.state = 126
            self.match(MT22Parser.ID)
            self.state = 127
            self.match(MT22Parser.ASSIGN)
            self.state = 128
            self.exp()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Vardecl_not_fullContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def atomic_types(self):
            return self.getTypedRuleContext(MT22Parser.Atomic_typesContext,0)


        def DYNAMIC(self):
            return self.getToken(MT22Parser.DYNAMIC, 0)

        def ASSIGN(self):
            return self.getToken(MT22Parser.ASSIGN, 0)

        def exp(self):
            return self.getTypedRuleContext(MT22Parser.ExpContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_vardecl_not_full




    def vardecl_not_full(self):

        localctx = MT22Parser.Vardecl_not_fullContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_vardecl_not_full)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [25, 26, 27]:
                self.state = 130
                self.atomic_types()
                pass
            elif token in [30]:
                self.state = 131
                self.match(MT22Parser.DYNAMIC)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 134
            self.match(MT22Parser.ID)
            self.state = 137
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==15:
                self.state = 135
                self.match(MT22Parser.ASSIGN)
                self.state = 136
                self.exp()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Vardecl_arrayContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atomic_types(self):
            return self.getTypedRuleContext(MT22Parser.Atomic_typesContext,0)


        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def dimensions(self):
            return self.getTypedRuleContext(MT22Parser.DimensionsContext,0)


        def ASSIGN(self):
            return self.getToken(MT22Parser.ASSIGN, 0)

        def array_lit(self):
            return self.getTypedRuleContext(MT22Parser.Array_litContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_vardecl_array




    def vardecl_array(self):

        localctx = MT22Parser.Vardecl_arrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_vardecl_array)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.atomic_types()
            self.state = 140
            self.match(MT22Parser.ID)
            self.state = 141
            self.dimensions()
            self.state = 144
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==15:
                self.state = 142
                self.match(MT22Parser.ASSIGN)
                self.state = 143
                self.array_lit()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNC(self):
            return self.getToken(MT22Parser.FUNC, 0)

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def LP(self):
            return self.getToken(MT22Parser.LP, 0)

        def param_list(self):
            return self.getTypedRuleContext(MT22Parser.Param_listContext,0)


        def RP(self):
            return self.getToken(MT22Parser.RP, 0)

        def NEW_LINE(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.NEW_LINE)
            else:
                return self.getToken(MT22Parser.NEW_LINE, i)

        def block_stmt(self):
            return self.getTypedRuleContext(MT22Parser.Block_stmtContext,0)


        def return_stmt(self):
            return self.getTypedRuleContext(MT22Parser.Return_stmtContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_funcdecl




    def funcdecl(self):

        localctx = MT22Parser.FuncdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_funcdecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.match(MT22Parser.FUNC)
            self.state = 147
            self.match(MT22Parser.ID)
            self.state = 148
            self.match(MT22Parser.LP)
            self.state = 149
            self.param_list()
            self.state = 150
            self.match(MT22Parser.RP)
            self.state = 154
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 151
                    self.match(MT22Parser.NEW_LINE) 
                self.state = 156
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

            self.state = 160
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [47]:
                self.state = 157
                self.match(MT22Parser.NEW_LINE)
                pass
            elif token in [40]:
                self.state = 158
                self.block_stmt()
                pass
            elif token in [28]:
                self.state = 159
                self.return_stmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param_prime(self):
            return self.getTypedRuleContext(MT22Parser.Param_primeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_param_list




    def param_list(self):

        localctx = MT22Parser.Param_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_param_list)
        try:
            self.state = 164
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [25, 26, 27]:
                self.enterOuterAlt(localctx, 1)
                self.state = 162
                self.param_prime()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_primeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def paramdecl(self):
            return self.getTypedRuleContext(MT22Parser.ParamdeclContext,0)


        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def param_prime(self):
            return self.getTypedRuleContext(MT22Parser.Param_primeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_param_prime




    def param_prime(self):

        localctx = MT22Parser.Param_primeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_param_prime)
        try:
            self.state = 171
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 166
                self.paramdecl()
                self.state = 167
                self.match(MT22Parser.COMMA)
                self.state = 168
                self.param_prime()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 170
                self.paramdecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atomic_types(self):
            return self.getTypedRuleContext(MT22Parser.Atomic_typesContext,0)


        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def dimensions(self):
            return self.getTypedRuleContext(MT22Parser.DimensionsContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_paramdecl




    def paramdecl(self):

        localctx = MT22Parser.ParamdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_paramdecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 173
            self.atomic_types()
            self.state = 174
            self.match(MT22Parser.ID)
            self.state = 176
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==6:
                self.state = 175
                self.dimensions()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assign_stmt(self):
            return self.getTypedRuleContext(MT22Parser.Assign_stmtContext,0)


        def if_stmt(self):
            return self.getTypedRuleContext(MT22Parser.If_stmtContext,0)


        def for_stmt(self):
            return self.getTypedRuleContext(MT22Parser.For_stmtContext,0)


        def block_stmt(self):
            return self.getTypedRuleContext(MT22Parser.Block_stmtContext,0)


        def break_stmt(self):
            return self.getTypedRuleContext(MT22Parser.Break_stmtContext,0)


        def continue_stmt(self):
            return self.getTypedRuleContext(MT22Parser.Continue_stmtContext,0)


        def return_stmt(self):
            return self.getTypedRuleContext(MT22Parser.Return_stmtContext,0)


        def call_stmt(self):
            return self.getTypedRuleContext(MT22Parser.Call_stmtContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_stmt




    def stmt(self):

        localctx = MT22Parser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 186
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.state = 178
                self.assign_stmt()
                pass

            elif la_ == 2:
                self.state = 179
                self.if_stmt()
                pass

            elif la_ == 3:
                self.state = 180
                self.for_stmt()
                pass

            elif la_ == 4:
                self.state = 181
                self.block_stmt()
                pass

            elif la_ == 5:
                self.state = 182
                self.break_stmt()
                pass

            elif la_ == 6:
                self.state = 183
                self.continue_stmt()
                pass

            elif la_ == 7:
                self.state = 184
                self.return_stmt()
                pass

            elif la_ == 8:
                self.state = 185
                self.call_stmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Assign_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lhs(self):
            return self.getTypedRuleContext(MT22Parser.LhsContext,0)


        def ASSIGN(self):
            return self.getToken(MT22Parser.ASSIGN, 0)

        def exp(self):
            return self.getTypedRuleContext(MT22Parser.ExpContext,0)


        def NEW_LINE(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.NEW_LINE)
            else:
                return self.getToken(MT22Parser.NEW_LINE, i)

        def getRuleIndex(self):
            return MT22Parser.RULE_assign_stmt




    def assign_stmt(self):

        localctx = MT22Parser.Assign_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_assign_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 188
            self.lhs()
            self.state = 189
            self.match(MT22Parser.ASSIGN)
            self.state = 190
            self.exp()
            self.state = 192 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 191
                self.match(MT22Parser.NEW_LINE)
                self.state = 194 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==47):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(MT22Parser.IF, 0)

        def sub_exp(self):
            return self.getTypedRuleContext(MT22Parser.Sub_expContext,0)


        def newline_list(self):
            return self.getTypedRuleContext(MT22Parser.Newline_listContext,0)


        def stmt(self):
            return self.getTypedRuleContext(MT22Parser.StmtContext,0)


        def vardecl(self):
            return self.getTypedRuleContext(MT22Parser.VardeclContext,0)


        def elif_stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MT22Parser.Elif_stmtContext)
            else:
                return self.getTypedRuleContext(MT22Parser.Elif_stmtContext,i)


        def else_stmt(self):
            return self.getTypedRuleContext(MT22Parser.Else_stmtContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_if_stmt




    def if_stmt(self):

        localctx = MT22Parser.If_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_if_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 196
            self.match(MT22Parser.IF)
            self.state = 197
            self.sub_exp()
            self.state = 198
            self.newline_list()
            self.state = 201
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [28, 32, 35, 36, 37, 40, 46]:
                self.state = 199
                self.stmt()
                pass
            elif token in [25, 26, 27, 29, 30]:
                self.state = 200
                self.vardecl()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 206
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,16,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 203
                    self.elif_stmt() 
                self.state = 208
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,16,self._ctx)
